--- a/add.html
+++ b/add.html
@@ -37,6 +37,9 @@
       </button>
       <button id="home">Go Back To Home</button>
    </form>
+   <button id="menu" onclick="GoToMenu()">
+      Back To Main Menu
+   </button>
    <script src="script.js"></script>
 </body>
 </html>
