--- a/filter.html
+++ b/filter.html
@@ -9,16 +9,23 @@
 </head>
 <body>
    <h1>Filter Expenses</h1>
-            <label for="type">Type</label>
-            <input type="text" name="type" id="type" placeholder="Expense Type Here" required>
-   <div>
+   <div class="filter">
+      <label for="type">Type</label>
+      <input type="text" name="type" id="type" placeholder="Expense Type Here" required value="">
+
+      <label for="type">Range</label>
+      <div id="range">
+         <input type="number" name="range1" id="range1" placeholder="Start Range Here" value = "" required>
+         <input type="number" name="range2" id="range2" placeholder="End Range Here" value = "" required>
+      </div>
+   </div>
+
+   <div class="filterbtn">
       <button id="addNew" class="btn">
-         Add New Expense
-      </button>
-      <button id="filter" class="btn">
-         Go Back To Home
+         Show Filtered Results
       </button>
    </div>
+
    <table class="table">
       <thead>
          <th>Sr.</th>
@@ -27,16 +34,18 @@
          <th>Price</th>
          <th>Type</th>
          <th>Date</th>
-         <th>Options</th>
       </thead>
       <tbody id="tbody"></tbody>
    </table>
    <div>
-      <button id="filter" class="btn">
+      <button id="filterR" class="btn">
          Go Back To Home
       </button>
    </div>
-   <script src="scriptIndex.js"></script>
+   <button id="menu" onclick="GoToMenu()">
+      Back To Main Menu
+   </button>
+   <script src="scriptFilter.js"></script>
 </body>
 </html>
 
