--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
          Filter Result
       </button>
    </div>
+   <button id="menu" onclick="GoToMenu()">
+      Back To Main Menu
+   </button>
    <script src="scriptIndex.js"></script>
 </body>
 </html>
