--- a/update.html
+++ b/update.html
@@ -37,6 +37,9 @@
       </button>
       <button id="uhome">Return Back To Home</button>
    </form>
+   <button id="menu" onclick="GoToMenu()">
+      Back To Main Menu
+   </button>
    <script src="scriptUpdate.js"></script>
    <!-- <script src="script.js"></script> -->
 </body>
